 <resources>
    <string name="app_name">TicketApp</string>

    <string name="decrement_quesadillas">Disminuir cantidad de quesadillas</string>
    <string name="decrement_pozole_grande">Disminuir cantidad de pozole grande</string>
    <string name="decrement_pozole_chico">Disminuir cantidad de pozole chico</string>
    <string name="decrement_tostadas">Disminuir cantidad de tostadas</string>
    <string name="decrement_volcanes">Disminuir cantidad de volcanes</string>
    <string name="decrement_guajolota_extra">Disminuir cantidad de volcan queso/guisado extra</string>
    <string name="decrement_guajoloyet_natural">Disminuir cantidad de guajoloyets naturales</string>
    <string name="decrement_guajoloyet_natural_extra">Disminuir cantidad de guajoloyets naturales extra</string>
    <string name="decrement_guajoloyet_adobado">Disminuir cantidad de guajoloyets adobados</string>
    <string name="decrement_guajoloyet_adobado_extra">Disminuir cantidad de guajoloyets adobados extra</string>
    <string name="decrement_pambazos_naturales">Disminuir cantidad de pambazos naturales</string>
    <string name="decrement_pambazos_naturales_combinados">Disminuir cantidad de pambazos naturales combinados</string>
    <string name="decrement_pambazos_naturales_combinados_queso">Disminuir cantidad de pambazos naturales combinados con Queso</string>
    <string name="decrement_pambazos_naturales_queso">Disminuir cantidad de pambazos naturales Queso</string>
    <string name="decrement_pambazos_adobados">Disminuir cantidad de pambazos adobados</string>
    <string name="decrement_pambazos_adobados_combinados">Disminuir cantidad de pambazos adobados combinados</string>
    <string name="decrement_pambazos_adobados_combinados_queso">Disminuir cantidad de pambazos adobados combinados con queso</string>
    <string name="decrement_pambazos_adobados_extra">Disminuir cantidad de pambazos adobados extra</string>
    <string name="decrement_chalupas">Disminuir cantidad de chalupas</string>
    <string name="decrement_alones">Disminuir cantidad de alones</string>
    <string name="decrement_mollejas">Disminuir cantidad de mollejas</string>
    <string name="decrement_higados">Disminuir cantidad de hígados</string>
    <string name="decrement_patitas">Disminuir cantidad de patitas</string>
    <string name="decrement_huevos">Disminuir cantidad de huevos</string>
    <string name="decrement_refrescos">Disminuir cantidad de refrescos</string>
    <string name="decrement_cafe">Disminuir cantidad de café</string>
    <string name="decrement_aguas">Disminuir cantidad de agua de Jamaica/Horchata</string>
    <string name="decrement_aguas_sabor">Disminuir cantidad de aguas de sabor</string>
    <string name="decrement_agua_nat">Disminuir cantidad de agua natural</string>
    <string name="decrement_agua_te">Disminuir cantidad de agua para té</string>
    <string name="decrement_extra5">Disminuir cantidad de extra 5</string>
    <string name="decrement_extra10">Disminuir cantidad de extra 10</string>
     <string name="decrement_extra12">Disminuir cantidad de extra 12</string>
     <string name="decrement_postres20">Disminuir cantidad de Postres 20</string>
    <string name="decrement_postres25">Disminuir cantidad de Postres 25</string>
    <string name="decrement_postres30">Disminuir cantidad de Postres 30</string>
    <string name="decrement_postres35">Disminuir cantidad de Postres 35</string>

    <string name="increment_quesadillas">Aumentar cantidad de quesadillas</string>
    <string name="increment_pozole_grande">Aumentar cantidad de pozole grande</string>
    <string name="increment_pozole_chico">Aumentar cantidad de pozole chico</string>
    <string name="increment_tostadas">Aumentar cantidad de tostadas</string>
    <string name="increment_volcanes">Aumentar cantidad de volcanes</string>
    <string name="increment_guajolota_extra">Aumentar cantidad de volcan queso/guisado extra</string>
    <string name="increment_guajoloyet_natural">Aumentar cantidad de guajoloyets naturales</string>
    <string name="increment_guajoloyet_natural_extra">Aumentar cantidad de guajoloyets naturales extra</string>
    <string name="increment_guajoloyet_adobado">Aumentar cantidad de guajoloyets adobados</string>
    <string name="increment_guajoloyet_adobado_extra">Aumentar cantidad de guajoloyets adobados extra</string>
    <string name="increment_pambazos_naturales">Aumentar cantidad de pambazos naturales</string>
    <string name="increment_pambazos_naturales_combinados">Aumentar cantidad de pambazos naturales combinados</string>
    <string name="increment_pambazos_naturales_combinados_queso">Aumentar cantidad de pambazos naturales combinados con queso</string>
    <string name="increment_pambazos_naturales_queso">Aumentar cantidad de pambazos naturales Queso</string>
    <string name="increment_pambazos_adobados">Aumentar cantidad de pambazos adobados</string>
    <string name="increment_pambazos_adobados_combinados">Aumentar cantidad de pambazos adobados combinados</string>
    <string name="increment_pambazos_adobados_combinados_queso">Aumentar cantidad de pambazos adobados combinados con queso</string>
    <string name="increment_pambazos_adobados_extra">Aumentar cantidad de pambazos adobados extra</string>
    <string name="increment_chalupas">Aumentar cantidad de chalupas</string>
    <string name="increment_alones">Aumentar cantidad de alones</string>
    <string name="increment_mollejas">Aumentar cantidad de mollejas</string>
    <string name="increment_higados">Aumentar cantidad de hígados</string>
    <string name="increment_patitas">Aumentar cantidad de patitas</string>
    <string name="increment_huevos">Aumentar cantidad de huevos</string>
    <string name="increment_refrescos">Aumentar cantidad de refrescos</string>
    <string name="increment_cafe">Aumentar cantidad de café</string>
    <string name="increment_aguas">Aumentar cantidad de agua de Jamaica/Horchata</string>
    <string name="increment_aguas_sabor">Aumentar cantidad de aguas de sabor</string>
    <string name="increment_agua_nat">Aumentar cantidad de agua natural</string>
    <string name="increment_agua_te">Aumentar cantidad de agua para té</string>
    <string name="increment_extra5">Aumentar cantidad de extra 5</string>
    <string name="increment_extra10">Aumentar cantidad de extra 10</string>
     <string name="increment_extra12">Aumentar cantidad de extra 12</string>
     <string name="increment_postres20">Aumentar cantidad de Postres 20</string>
     <string name="increment_postres25">Aumentar cantidad de Postres 25</string>
    <string name="increment_postres30">Aumentar cantidad de Postres 30</string>
    <string name="increment_postres35">Aumentar cantidad de Postres 35</string>

     <string name="incluir_n_mero_de_cuenta">Incluir Número de cuenta</string>
     <string name="cuenta"><font><big>4152-3145-3997-7978 </big></font></string>

     <!-- ===================== HAMBURGUESAS CLASICAS ===================== -->
     <string name="decrement_hamburguesa_clasica">Disminuir cantidad de hamburguesa clásica</string>
     <string name="decrement_hamburguesa_hawaiana">Disminuir cantidad de hamburguesa hawaiana</string>
     <string name="decrement_hamburguesa_pollo">Disminuir cantidad de hamburguesa de pollo</string>
     <string name="decrement_hamburguesa_champinones">Disminuir cantidad de hamburguesa de champiñones</string>
     <string name="decrement_hamburguesa_arrachera">Disminuir cantidad de hamburguesa de arrachera</string>
     <string name="decrement_hamburguesa_maggy">Disminuir cantidad de hamburguesa maggy</string>
     <string name="decrement_hamburguesa_normal">Disminuir cantidad de hamburguesa normal</string>
     <string name="decrement_hamburguesa_doble">Disminuir cantidad de hamburguesa doble</string>


     <string name="increment_hamburguesa_clasica">Aumentar cantidad de hamburguesa clásica</string>
     <string name="increment_hamburguesa_hawaiana">Aumentar cantidad de hamburguesa hawaiana</string>
     <string name="increment_hamburguesa_pollo">Aumentar cantidad de hamburguesa de pollo</string>
     <string name="increment_hamburguesa_champinones">Aumentar cantidad de hamburguesa de champiñones</string>
     <string name="increment_hamburguesa_arrachera">Aumentar cantidad de hamburguesa de arrachera</string>
     <string name="increment_hamburguesa_maggy">Aumentar cantidad de hamburguesa maggy</string>
     <string name="increment_hamburguesa_normal">Aumentar cantidad de hamburguesa normal</string>
     <string name="increment_hamburguesa_doble">Aumentar cantidad de hamburguesa doble</string>
     <!-- ===================== HAMBURGUESAS COMBO ===================== -->

     <string name="decrement_hamburguesa_clasica_combo">Disminuir cantidad de hamburguesa clásica Combo</string>
     <string name="decrement_hamburguesa_hawaiana_combo">Disminuir cantidad de hamburguesa hawaiana Combo</string>
     <string name="decrement_hamburguesa_pollo_combo">Disminuir cantidad de hamburguesa de pollo Combo</string>
     <string name="decrement_hamburguesa_champinones_combo">Disminuir cantidad de hamburguesa de champiñones Combo</string>
     <string name="decrement_hamburguesa_arrachera_combo">Disminuir cantidad de hamburguesa de arrachera Combo</string>
     <string name="decrement_hamburguesa_maggy_combo">Disminuir cantidad de hamburguesa maggy Combo</string>
     <string name="decrement_hamburguesa_normal_combo">Disminuir cantidad de hamburguesa normal Combo</string>
     <string name="decrement_hamburguesa_doble_combo">Disminuir cantidad de hamburguesa doble Combo</string>


     <string name="increment_hamburguesa_clasica_combo">Aumentar cantidad de hamburguesa clásica Combo</string>
     <string name="increment_hamburguesa_hawaiana_combo">Aumentar cantidad de hamburguesa hawaiana Combo</string>
     <string name="increment_hamburguesa_pollo_combo">Aumentar cantidad de hamburguesa de pollo Combo</string>
     <string name="increment_hamburguesa_champinones_combo">Aumentar cantidad de hamburguesa de champiñones Combo</string>
     <string name="increment_hamburguesa_arrachera_combo">Aumentar cantidad de hamburguesa de arrachera Combo</string>
     <string name="increment_hamburguesa_maggy_combo">Aumentar cantidad de hamburguesa maggy Combo</string>
     <string name="increment_hamburguesa_normal_combo">Aumentar cantidad de hamburguesa normal Combo</string>
     <string name="increment_hamburguesa_doble_combo">Aumentar cantidad de hamburguesa doble Combo</string>

     <!-- ===================== TACOS ===================== -->
     <string name="decrement_taco_unitario">Disminuir cantidad de taco (c/u)</string>
     <string name="decrement_taco_con_queso">Disminuir cantidad de taco con queso (c/u)</string>

     <string name="increment_taco_unitario">Aumentar cantidad de taco (c/u)</string>
     <string name="increment_taco_con_queso">Aumentar cantidad de taco con queso (c/u)</string>

     <!-- ===================== ALITAS ===================== -->
     <string name="decrement_alitas6">Disminuir cantidad de alitas 6 piezas</string>
     <string name="decrement_alitas10">Disminuir cantidad de alitas 10 piezas</string>
     <string name="decrement_alitas15">Disminuir cantidad de alitas 15 piezas</string>

     <string name="increment_alitas6">Aumentar cantidad de alitas 6 piezas</string>
     <string name="increment_alitas10">Aumentar cantidad de alitas 10 piezas</string>
     <string name="increment_alitas15">Aumentar cantidad de alitas 15 piezas</string>


 </resources>